Refactor: separated logics and paths

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,17 @@
 {
     "cSpell.words": [
+        "apsje",
+        "badgeid",
+        "cardid",
+        "chara",
+        "charaid",
+        "costumeid",
+        "Gacha",
+        "inviteid",
         "jsonify",
         "smartbeat",
-        "specialbg"
+        "specialbg",
+        "tvrg",
+        "UAVDKC"
     ]
 }
