(Redo) Add: Crypto(!!!), tutorial bypass and cheats, decorations save

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "Gacha",
         "inviteid",
         "jsonify",
+        "seaes",
         "smartbeat",
         "specialbg",
         "tvrg",
